# llm-pricing-calculator

./: .gitmodules  README.md  pyproject.toml  requirements.txt  setup.py
pricing_calculator/: cli.py  config.py  main_streamlit.py  pricing.py  self_hosted.py
pricing_calculator/datasets/: common.py  hosting_costs.py  llm_as_a_service.py  model_profiles.py
resources/: hosting-costs_20240102.csv  llm-as-a-service-pricing_20240102.csv  llm-as-a-service-pricing_20240112.csv
resources/profiles/mistral-7b/: g5.2xlarge-input_profile.csv
resources/profiles/mistral-7b/llama.cpp/: g5.2xlarge-output_profile.json
resources/profiles/mistral-7b/vllm/: g5.2xlarge-output_profile.json
resources/type1_profiles/ai21.j2-mid-v1/: input_profile.csv  output_profile.csv
resources/type1_profiles/ai21.j2-ultra-v1/: input_profile.csv  output_profile.csv
resources/type1_profiles/amazon.titan-text-express-v1/: input_profile.csv  output_profile.csv
resources/type1_profiles/amazon.titan-text-lite-v1/: input_profile.csv  output_profile.csv
resources/type1_profiles/anthropic.claude-instant-v1/: input_profile.csv  output_profile.csv
resources/type1_profiles/anthropic.claude-v1/: input_profile.csv  output_profile.csv
resources/type1_profiles/cohere.command-text-v14/: input_profile.csv  output_profile.csv
