[project]
# dynamic = ["version"]
name = "llm-pricing-calculator"
dependencies = ["streamlit>=1.32.2", "pyyaml>=6.0.1", "pydantic>=2.6.4"]
requires-python = ">=3.10"
license = { file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
version = "0.0.1"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
pricing-calculator = "pricing_calculator.cli:cli"

[project.optional-dependencies]
cli = ["click"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pricing_calculator"]
